# ayon-automator

./: .gitignore  Build.py  README.md  pyproject.toml
AyonCiCd/: Cmake.py  GBench.py  GTest.py  Project.py  SysCon.py  VenvFuncs.py  __init__.py  cmd.py  docGen.py  helpers.py
docs/: make.bat
docs/source/: conf.py
docs/source/autoapi/: index.rst
docs/source/autoapi/AyonCiCd/: index.rst
docs/source/autoapi/AyonCiCd/Cmake/: index.rst
docs/source/autoapi/AyonCiCd/GBench/: index.rst
docs/source/autoapi/AyonCiCd/GTest/: index.rst
docs/source/autoapi/AyonCiCd/Project/: index.rst
docs/source/autoapi/AyonCiCd/SysCon/: index.rst
docs/source/autoapi/AyonCiCd/cmd/: index.rst
docs/source/autoapi/AyonCiCd/docGen/: index.rst
